# fediback

./: .gitignore  Cargo.toml  README.md  bacon.toml  compile-all-targets.sh  release.sh
src/: app.rs  args.rs  client.rs  conf.rs  db.rs  error.rs  main.rs  note.rs  page.rs  public_key.rs  skin.rs  user.rs  user_ref.rs
